Add Tomcat CPU Usage

--- a/final-report/final_report.tex
+++ b/final-report/final_report.tex
@@ -176,6 +176,14 @@ Figure \ref{fig:goal} describes the architecture of \mytitle{} after our changes
 
 \begin{figure}[!h]
 	\begin{center}
+		\includegraphics[scale=0.22]{tomcat-cpu.pdf}
+	\end{center}
+	\caption{\textbf{Diagram showing the difference in CPU usage between Tomcat with \mytitle{} and Tomcat with Tomcat Native.}}
+	\label{fig:tomcat-cpu}
+\end{figure}
+
+\begin{figure}[!h]
+	\begin{center}
 		\includegraphics[scale=0.23]{undertow-throughput.pdf}
 	\end{center}
 	\caption{\textbf{Diagram showing the difference in throughput between Undertow with \mytitle{} and Undertow with the JSSE SSL Engine.}}
