Try to fix table

--- a/final-report/final_report.tex
+++ b/final-report/final_report.tex
@@ -174,12 +174,12 @@ The cluster running this benchmark includes 4 machines generating the load (HTTP
 Here are the specifications for the test machine:
 \\
 \\
-\begin{tabular}{rl}
-	Model: & IBM System x3650 \\ 
-	CPU: & Intel Xeon 2.50 GHz \\
-	CPU Cores: & 2x4 (8 total) \\
-	CPU Cache: & 6144 KB \\
-	Memory (RAM): & 20 GiB \\ 
+\begin{tabular}{lrl}
+	Model&: & IBM System x3650 \\ 
+	CPU&: & Intel Xeon 2.50 GHz \\
+	CPU Cores&: & 2x4 (8 total) \\
+	CPU Cache&: & 6144 KB \\
+	Memory (RAM)&: & 20 GiB \\ 
 \end{tabular} 
 \\
 \\
