Fix small mistake in Tomcat Native name

--- a/final-report/final_report.tex
+++ b/final-report/final_report.tex
@@ -187,7 +187,7 @@ The machines are connected together via a 10 Gbit/s switch (\textit{Cisco Nexus 
 \subsubsection{Results}
 Figure \ref{fig:tomcat-throughput} demonstrates that the throughput of Tomcat is mostly the same between Tomcat Native and \mytitle{}. The latter shows slightly better results in some cases, although the difference may not be statistically significant.
 
-The CPU usage of \mytitle{} is either lower or equal to the CPU usage of Tomcat Native. Since the throughput of Tomcat-Native did not decrease, this could indicate a small improvement in energy efficiency.
+The CPU usage of \mytitle{} is either lower or equal to the CPU usage of Tomcat Native. Since the throughput of Tomcat Native did not decrease, this could indicate a small improvement in energy efficiency.
 
 Our work consisted in removing a layer of abstraction, so our performance goal was to keep the same throughput and CPU usage with a possible improvement. Therefore we can see that \mytitle{} reached our expectations according to these results.
 \begin{figure}[!h]
