Quickly mention cross-platform support in Future Work

--- a/final-report/final_report.tex
+++ b/final-report/final_report.tex
@@ -228,10 +228,10 @@ Some experiments regarding dynamic loading were performed in the \texttt{dynload
 
  Unfortunately developing a functional prototype with dynamic loading was taking too long, to the detriment of the rest of the project. We therefore made the decision to stop working on this feature.
 
-\section{Future Works}
+\section{Future Work}
 We completed all the obligatory milestones of the projects. However, some optional tasks were either not started or not finished.
 
-The current code is only a prototype. In the future, tests should be put in place to ensure the code is working as expected in every situations. \mytitle{} should also have a streamlined build process. This should be done when it is eventually merged in Tomcat and Undertow.
+The current code is only a prototype. In the future, tests should be put in place to ensure the code is working as expected in every situations and for all supported platforms. \mytitle{} should also have a streamlined build process. This should be done when it is eventually merged in Tomcat and Undertow.
 
 \subsection{Better integration}
 Some improvements should be made regarding the integration of \mytitle{} in Tomcat and Undertow, in addition to a better build process.
