--- a/final-report/final_report.tex
+++ b/final-report/final_report.tex
@@ -187,7 +187,7 @@ The machines are connected together via a 10 Gbit/s switch (\textit{Cisco Nexus 
 \subsubsection{Results}
 Figure \ref{fig:tomcat-throughput} demonstrates that the throughput of Tomcat is mostly the same between Tomcat Native and \mytitle{}. The latter shows slightly better results in some cases, although the difference may not be statistically significant.
 
-The CPU usage of \mytitle{} is either lower or equal to the CPU usage of Tomcat Native. Since the throughput of Tomcat Native did not decrease, this could indicate a small improvement in energy efficiency.
+As seen on Figure \ref{fig:tomcat-cpu}, the CPU usage of \mytitle{} is either lower or equal to the CPU usage of Tomcat Native. Since the throughput of Tomcat Native did not decrease, this could indicate a small improvement in energy efficiency.
 
 Our work consisted in removing a layer of abstraction, so our performance goal was to keep the same throughput and CPU usage with a possible improvement. Therefore we can see that \mytitle{} reached our expectations according to these results.
 \begin{figure}[!h]
@@ -207,6 +207,21 @@ Our work consisted in removing a layer of abstraction, so our performance goal w
 \end{figure}
 
 \subsection{Undertow}
+For Undertow we ran the tests ourselves on a desktop computer. The benchmark was similar, except with fewer concurrent clients and requests.
+Here are the specifications for the test machine:
+\\
+\\
+\begin{tabular}{lrl}
+	CPU&: & Intel Core i5-4670K @ 3.40GHz \\
+	CPU Cores&: & 4 \\
+	CPU Cache&: & L2: 256KB, L3: 6144KB \\
+	Memory (RAM)&: & DDR3, 8GiB @ 1600MHz \\
+	JDK&: & OpenJDK 1.8.0\_92 64-Bit
+\end{tabular} 
+\subsubsection{Results}
+See Figure \ref{fig:undertow-throughput} for the measured throughput of Undertow.
+As we expected, the OpenSSL engine provided by \mytitle{} outperforms JSSE by far. The throughput increases with file size, confirming that we see the biggest benefits when most of the workload is encryption.
+
 \begin{figure}[!h]
 	\begin{center}
 		\includegraphics[scale=0.23]{undertow-throughput.pdf}
